# Automata

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  automata.h  example.txt  main.cpp
include/: automata.h
src/: automata.cpp  main.cpp
